update forms (tinymce)

--- a/src/Application/ChangementsBundle/Resources/views/Changements/show.html.twig
+++ b/src/Application/ChangementsBundle/Resources/views/Changements/show.html.twig
@@ -1,5 +1,10 @@
 {% extends "ApplicationChangementsBundle::layout.html.twig" %}
 
+{% block javascripts %}
+{{ parent() }}
+{{ tinymce_init() }}
+{% endblock %}
+
   {% block stylesheets %}
 {{ parent() }}
 <link rel="stylesheet" href="{{ asset('bundles/applicationchangements/css/sliding.css') }}" type="text/css" media="all"/>
