--- a/src/Application/CertificatsBundle/Resources/views/CertificatsCenter/indexapy.html.twig
+++ b/src/Application/CertificatsBundle/Resources/views/CertificatsCenter/indexapy.html.twig
@@ -47,7 +47,12 @@ LISTE DES {{ parent() }}
  
  {#{ date('-30days')|date('Y-m-d') }#}
 
+
+{% if is_granted("ROLE_ADMIN") %}   
 <a href="{{ path('certificatscenter_new') }}" class="btn btn-small btn-primary">Ajouter Certificat</a>
+{% endif %}
+
+
 <br> <br> 
 
 {#
