--- a/src/Application/EservicesBundle/Resources/views/Eproduit/indexmesproduits.html.twig
+++ b/src/Application/EservicesBundle/Resources/views/Eproduit/indexmesproduits.html.twig
@@ -21,7 +21,12 @@ MES PRODUITS
     {% endfor %}
 {% endfor %}
 
+
+{% if is_granted("ROLE_USER") %}   
 <a href="{{ path('eproduit_new') }}" class="btn btn-small btn-primary">Ajouter un Produit</a>
+{% endif %}
+
+
 
 <table class="table table-striped table-bordered table-hover">
     <table class="table table-striped table-bordered table-hover">
