--- a/src/Application/EservicesBundle/Resources/views/Eservice/indexservices.html.twig
+++ b/src/Application/EservicesBundle/Resources/views/Eservice/indexservices.html.twig
@@ -27,7 +27,11 @@ MES PROPOSITIONS DE SERVICES
     {% endfor %}
 {% endfor %}
 
+{% if is_granted("ROLE_USER") %}   
 <a href="{{ path('eservice_new') }}" class="btn btn-medium btn-primary"><i class="icon-plus"></i> Ajouter un Service</a>
+{% endif %}
+
+
 <br><br>
 
 
