update forms (tinymce)

--- a/app/Resources/views/navbar.html.twig
+++ b/app/Resources/views/navbar.html.twig
@@ -121,6 +121,7 @@
                                                                         <li><a href="{{ path('eproduit') }}"><i class="icon-plus-sign"></i> {{ 'DashBoard Produits'|trans }}</a></li>
                                                                         <li><a href="{{ path('eproduit_mesproduits') }}"><i class="icon-plus-sign"></i> {{ 'Gérer Mes Produits'|trans }}</a></li>
                                                                         <li><a href="{{ path('eproduit_propositions') }}"><i class="icon-plus-sign"></i> {{ 'Gérer Les Propositions'|trans }}</a></li>
+                                                                           <li><a href="{{ path('enotes') }}"><i class="icon-camera"></i> {{ 'Notes Produits'|trans }}</a></li>
                                                                         <li><a href="{{ path('eproduit_indexserch') }}"><i class="icon-camera"></i> {{ 'Recherche Produit'|trans }}</a></li>
                                                                         <li><a href="{{ path('eproduit_indexadmin') }}"><i class="icon-camera"></i> {{ 'Tous les Produits'|trans }}</a></li>
 
