--- a/src/Application/EservicesBundle/Resources/views/Eproduit/indexmesproduits.html_1.twig
+++ b/src/Application/EservicesBundle/Resources/views/Eproduit/indexmesproduits.html_1.twig
@@ -8,7 +8,7 @@
 
 {% block content_header '' %}
 {% block title %}
-PRODUITS DE MON GROUPE
+MES PRODUITS 
 {% endblock %}
 {% block content %}
 
@@ -21,31 +21,41 @@ PRODUITS DE MON GROUPE
     {% endfor %}
 {% endfor %}
 
-{#-----------------------------------------------#}
 
- 
-<br>
+{% if is_granted("ROLE_USER") %}   
+<a href="{{ path('eproduit_new') }}" class="btn btn-small btn-primary">Ajouter un Produit</a>
+{% endif %}
+
 
 
 <table class="table table-striped table-bordered table-hover">
-    <thead>
-        <tr class="title"> 
-                 <th>Id</th>
-                <th>Name</th>
-                <th{% if paginationa.isSorted('c.nom') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(paginationa, 'Categorie', 'c.nom') }}</th>
-                <th{% if paginationa.isSorted('b.username') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(paginationa, 'Proprietaire', 'b.username') }}</th>
-               <th{% if paginationa.isSorted('d.idStatus.nom') %} class="sorted"{% endif %}>
+    <table class="table table-striped table-bordered table-hover">
+       <thead>
+        <tr class="title">
+              <th>{{ knp_pagination_sortable(paginationa, 'Id', 'a.id') }}</th>
+    
+ <th{% if paginationa.isSorted('a.name') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(paginationa, 'Nom', 'a.name') }}</th>
+ <th{% if paginationa.isSorted('c.nom') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(paginationa, 'Categorie', 'c.nom') }}</th>
+ <th{% if paginationa.isSorted('d.idStatus.nom') %} class="sorted"{% endif %}>
 {{ knp_pagination_sortable(paginationa, 'S', 'd.idStatus.nom') }}
-                   <i class="icon-flag"></i></th>
-                   
-                   <th>Description</th>
-                
-                 <th>Image</th>
-                 <th colspan="1">Actions</th>
-            </tr>
-        </thead>
+                   <i class="icon-flag"></i></th> 
+ {#
+<th{% if paginationa.isSorted('a.description') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(paginationa, 'Description', 'a.description') }}</th>
+#}
+     <th>Image</th>
+           {% if is_granted("ROLE_ADMIN") %}
+ <th colspan="3"><center>Actions</center></th>
+{% else %}
+ <th><center>Actions</center></th>
+{% endif %}
+        </tr>
+    </thead>
+ 
+  
         <tbody>
         {% for entity in paginationa %}
+             {# {{  entity.description|slice(0, 25) }}
+              {{  entity.description|slice(0, 25)|replace({"\n":"--"})|raw }}#}
             <tr>
                 
                 
@@ -56,12 +66,7 @@ PRODUITS DE MON GROUPE
                   {% else %}
                   <td>---</td>
                   {% endif %}
-                     {% if entity.proprietaire is not null %}               
-                    <td>{{ entity.proprietaire.username }}</td>
-                 {% else %}
-                  <td>---</td>
-                     {% endif %}
-                    <td>
+                  <td>
                                    {% if entity.idStatus is not null %}
                                {% if entity.idStatus.nom == 'open' %}
 
@@ -77,7 +82,10 @@ PRODUITS DE MON GROUPE
      
 {% endif %} 
                                    </td> 
-                <td>{{ entity.description|raw }}</td>
+ 
+                           {# <td>           {{  entity.description|raw|slice(0, 20)|raw }}</td>#}
+      {#  <td>{{ entity.description|raw|length > 30 ? entity.description|slice(0, 30)|raw  : entity.description|raw  }}</td>
+        #}    {#  <td>{{ entity.description|raw }}</td>#}
                        <td>
                 {% if entity.image is not null %}               
            
@@ -94,16 +102,23 @@ PRODUITS DE MON GROUPE
                         <img src="{{ asset('bundles/applicationeservices/images/detail.png') }}" alt="show" width="15" height="15" />
                     </a>
                 </td>
-            
                 <td>
-                    <a href="{{ path('enotes_addfromproduit', { 'id': entity.id }) }}">
-                        <img src="{{ asset('bundles/applicationeservices/images/Stara.gif') }}" alt="show" width="15" height="15" />
+                    <a href="{{ path('eproduit_edit', { 'id': entity.id }) }}">
+                        <img src="{{ asset('bundles/applicationeservices/images/edit.png') }}" alt="edit" width="15" height="15" />
                     </a>
-                </td> 
+                </td>
+                   <td>
+     <a href="{{ path('eproduit_delete', { 'id': entity.id }) }}">
+                        <img src="{{ asset('bundles/applicationeservices/images/delete.png') }}" alt="delete" width="15" height="15" />
+                    </a>
+                </td>
+                
                 
             </tr>
         {% endfor %}
         </tbody>
     </table>
   {{ knp_pagination_render(paginationa) }}
+
+
     {% endblock %}
