--- a/src/Application/EservicesBundle/Resources/views/Eproduit/show.html.twig
+++ b/src/Application/EservicesBundle/Resources/views/Eproduit/show.html.twig
@@ -32,6 +32,8 @@ PRODUIT: {{ entity.name }}
              
      <a href="{{ path(btnretour)  }}" class="btn btn-small btn-success">Retour</a>
 <a href="{{ path('eproduit_edit', { 'id': entity.id }) }}" class="btn btn-small btn-warning">Editer</a>
+<br><br>
+<a href="{{ path('enotes_addfromproduit', { 'id': entity.id }) }}" class="btn btn-large btn-warning">Noter</a>
 <br> <br> 
 
   <table class="table table-striped table-bordered table-hover">
