--- a/src/Application/EservicesBundle/Resources/views/EproduitNotes/index.html.twig
+++ b/src/Application/EservicesBundle/Resources/views/EproduitNotes/index.html.twig
@@ -2,11 +2,11 @@
 
   {% block stylesheets %}
 {{ parent() }}
-      <link rel="stylesheet" href="{{ asset('bundles/applicationeservices/css/sliding.css') }}" type="text/css" media="all"/>
-     
+<link rel="stylesheet" href="{{ asset('bundles/applicationeservices/css/sliding.css') }}" type="text/css" media="all"/>
+
  {% endblock %}
 
-      
+
 {% block javascripts %}
 {{ parent() }}
  {% endblock %}
@@ -20,60 +20,67 @@ MES NOTES-PRODUITS
 
 {% for type, flashMessages in app.session.flashbag.all() %}
     {% for flashMessage in flashMessages %}
-        <div class="alert alert-{{ type }}">
+<div class="alert alert-{{ type }}">
             {{ flashMessage|trans }}
-        </div>
+    </div>
     {% endfor %}
 {% endfor %}
 
  {% if is_granted("ROLE_USER") %}   
-<a href="{{ path('enotes_new') }}" class="btn btn-medium btn-primary"><i class="icon-plus"></i> Ajouter une note</a>
+    <a href="{{ path('enotes_new') }}" class="btn btn-medium btn-primary"><i class="icon-plus"></i> Ajouter une note</a>
 {% endif %}
-<br><br>
+    <br><br>
 
 
     <table class="table table-striped table-bordered table-hover">
-       <thead>
-        <tr class="title">
-                <th>Id</th>
-                 <th>Produit</th>
-                  <th>Proprietaire</th>
-                  <th>Image</th>
-                <th>Note</th>
-                <th colspan="2">Actions</th>
+        <thead>
+            <tr class="title">
+
+                <th>{{ knp_pagination_sortable(paginationa, 'Id', 'a.id') }}</th>
+                <th>Produit</th>
+                <th>Proprietaire</th>
+                <th>Image</th>
+                <th{% if paginationa.isSorted('a.note') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(paginationa, 'Notes', 'a.note') }}</th>
+                       <th{% if paginationa.isSorted('a.updated') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(paginationa, 'Date', 'a.updated') }}</th>
+                      <th colspan="2">Actions</th>
             </tr>
         </thead>
         <tbody>
-        {% for entity in entities %}
-            <tr>
-                
-                <td><a href="{{ path('enotes_show', { 'id': entity.id }) }}">{{ entity.id }}</a></td>
-                 <td>{{ entity.produit.name }}</td>
-                   <td>{{ entity.produit.proprietaire.username }}</td>
-                 <td>  
+        {% for entity in paginationa %}
+                <tr>
+
+                    <td><a href="{{ path('enotes_show', { 'id': entity.id }) }}">{{ entity.id }}</a></td>
+                    <td>{{ entity.produit.name }}</td>
+                    <td>{{ entity.produit.proprietaire.username }}</td>
+                    <td>  
                      {% if entity.produit.image is not null %}               
-           
+
       {#   {{ app.request.basePath }} {{ vich_uploader_asset(message, 'image') }}#}
         {#   <img width="60px" src=" {{ app.request.basePath }} {{ vich_uploader_asset(entity, 'image') }}" alt="{{ entity.imageName }}" />
 #}
-    <img width="40px" src="{{ vich_uploader_asset(entity.produit, 'image') }}" alt="{{ entity.produit.imageName }}" />
+                            <img width="40px" src="{{ vich_uploader_asset(entity.produit, 'image') }}" alt="{{ entity.produit.imageName }}" />
          {% else %}
-           ---
+                            ---
          {% endif %}
-           </td>
-           
-           
-                 <td>{{ entity.note }}</td>
-                 <td>
-                    <a href="{{ path('enotes_show', { 'id': entity.id }) }}">
-                        <img src="{{ asset('bundles/applicationeservices/images/detail.png') }}" alt="show" width="15" height="15" />
-                    </a>
-                </td>
-                <td>
-                    <a href="{{ path('enotes_edit', { 'id': entity.id }) }}">
-                        <img src="{{ asset('bundles/applicationeservices/images/edit.png') }}" alt="edit" width="15" height="15" />
-                    </a>
-                </td>
+                        </td>
+
+
+                        <td>{{ entity.note }}</td>
+                 {% if entity.updated is defined %}
+                        <td>{{ entity.updated|date('Y-m-d') }}</td>
+                 {% else %}
+                        <td>---</td>
+                {% endif %}
+                        <td>
+                            <a href="{{ path('enotes_show', { 'id': entity.id }) }}">
+                                <img src="{{ asset('bundles/applicationeservices/images/detail.png') }}" alt="show" width="15" height="15" />
+                            </a>
+                        </td>
+                        <td>
+                            <a href="{{ path('enotes_edit', { 'id': entity.id }) }}">
+                                <img src="{{ asset('bundles/applicationeservices/images/edit.png') }}" alt="edit" width="15" height="15" />
+                            </a>
+                        </td>
                 {#
                    <td>
      <a href="{{ path('enotes_delete', { 'id': entity.id }) }}">
@@ -81,11 +88,12 @@ MES NOTES-PRODUITS
                     </a>
                 </td>
                 #}
-                
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
 
-       
+                    </tr>
+        {% endfor %}
+                </tbody>
+            </table>
+
+  {{ knp_pagination_render(paginationa) }}
+
     {% endblock %}
