Ajout blog par groupe

--- a/app/Resources/views/navbar.html.twig
+++ b/app/Resources/views/navbar.html.twig
@@ -128,6 +128,29 @@
                                                                     </ul>
                                                                 </li>
 
+                                 {% if foo[0] == 'epost' %}
+                                                        <li class="dropdown active">
+                                    {% else %}  
+                                                            <li class="dropdown">
+                                    {% endif %}
+
+                                                                    <a class="dropdown-toggle" data-toggle="dropdown" href="#"><i class="icon-white  icon-shopping-cart"></i>
+                                                                        Blog<b class="caret"></b> </a>
+                                                                    <ul class="dropdown-menu">
+                                                                        <li><a href="{{ path('epost') }}"><i class="icon-plus-sign"></i> {{ 'DashBoard Posts'|trans }}</a></li>
+                                                                        <li><a href="{{ path('epost_mesposts') }}"><i class="icon-plus-sign"></i> {{ 'Mes Posts'|trans }}</a></li>
+                                                                        <li><a href="{{ path('epost_propositions') }}"><i class="icon-plus-sign"></i> {{ 'Groupe-Posts'|trans }}</a></li>
+                                                                           <li><a href="{{ path('epostnotes') }}"><i class="icon-camera"></i> {{ 'Notes-Posts'|trans }}</a></li>
+                                                                        <li><a href="{{ path('epost_indexserch') }}"><i class="icon-camera"></i> {{ 'Recherche Posts'|trans }}</a></li>
+                                                                        <li><a href="{{ path('epost_indexadmin') }}"><i class="icon-camera"></i> {{ 'Tous les Posts'|trans }}</a></li>
+
+                                                                    </ul>
+                                                                </li>
+
+                                               
+                                                                
+                                                                
+                                                                
                                                                 
                                      
                                                  {% if foo[0] == 'egroup' %}
@@ -180,10 +203,10 @@
                                         </ul>
                                     </li>
                                     #}
-
+{#
 
                                                                         <li><a href="{{ path('sonata_news_home') }}">{{ 'Blog'|trans }}</a></li>
-
+#}
 
 
 
