--- a/src/Application/EpostBundle/Resources/views/Epost/indexadmin.html.twig
+++ b/src/Application/EpostBundle/Resources/views/Epost/indexadmin.html.twig
@@ -21,7 +21,11 @@ POSTS DISPONIBLES
     {% endfor %}
 {% endfor %}
 
-<a href="{{ path('epost_new') }}" class="btn btn-small btn-primary">Ajouter un Post</a>
+{% if is_granted("ROLE_USER") %}   
+<a href="{{ path('epost_new') }}" class="btn btn-medium btn-primary"><i class="icon-plus"></i> Ajouter un Post</a>
+{% endif %}
+<br><br>
+
 
 <table class="table table-striped table-bordered table-hover">
        <thead>
@@ -32,8 +36,10 @@ POSTS DISPONIBLES
  <th{% if paginationa.isSorted('c.nom') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(paginationa, 'Categorie', 'c.nom') }}</th>
  <th{% if paginationa.isSorted('b.username') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(paginationa, 'Proprietaire', 'b.username') }}</th>
        <th{% if paginationa.isSorted('d.idStatus.nom') %} class="sorted"{% endif %}>
-{{ knp_pagination_sortable(paginationa, 'S', 'd.idStatus.nom') }}
-                   <i class="icon-flag"></i></th> 
+{{ knp_pagination_sortable(paginationa, 'S', 'd.idStatus.nom') }}<i class="icon-flag"></i></th> 
+ <th{% if paginationa.isSorted('a.createdAt') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(paginationa, 'Date', 'a.createdAt') }}</th>
+        
+        
  <th{% if paginationa.isSorted('a.description') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(paginationa, 'Description', 'a.description') }}</th>
    <th>Image</th>
     <th>Commentaires</th>
@@ -64,8 +70,8 @@ POSTS DISPONIBLES
                      {% endif %}
                      
                   <td>
-                                   {% if entity.idStatus is not null %}
-                               {% if entity.idStatus.nom == 'open' %}
+               {% if entity.idStatus is not null %}
+                               {% if entity.idStatus.nom == 'OPEN' %}
 
                                             <img src="{{ asset('bundles/applicationepost/images/cadenas-souvert.png') }}" alt="show" width="15" height="15" />
 
@@ -79,8 +85,7 @@ POSTS DISPONIBLES
      
 {% endif %} 
                                    </td> 
- 
-                                   
+  <td>{{ entity.createdAt|created_ago }}</td>
  
                 <td>{{ entity.description|raw }}</td>
                        <td>
@@ -103,6 +108,7 @@ POSTS DISPONIBLES
                         <img src="{{ asset('bundles/applicationepost/images/detail.png') }}" alt="show" width="15" height="15" />
                     </a>
                 </td>
+            {% if is_granted("ROLE_ADMIN") %}
                 <td>
                     <a href="{{ path('epost_edit', { 'id': entity.id }) }}">
                         <img src="{{ asset('bundles/applicationepost/images/edit.png') }}" alt="edit" width="15" height="15" />
@@ -114,7 +120,7 @@ POSTS DISPONIBLES
                     </a>
                 </td>
                 
-                
+                {% endif %}
             </tr>
         {% endfor %}
         </tbody>
